Added badge in the franz when has new chat.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "main": "index.js",
   "author": "Edmar Gomes <edmar.gomes@nyx.tc>",
   "license": "MIT",
+  "repository": "https://github.com/nyxtechnology/franz-recipe-jivochat",
   "config": {
-    "serviceURL": "https://app.jivosite.com"
+    "serviceURL": "https://app.jivosite.com",
+    "hasNotificationSound": true
   }
 }
